@@ -1,6 +1,7 @@
 45
 ================
 
+09/04/21 Hide driver info on transport for no "View Owner" perm
 
 44
 ================
